# Copyright 2016 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/config/chrome_build.gni")
import("//build/config/chromecast_build.gni")
import("//build/config/sanitizers/sanitizers.gni")
import("//build/config/ui.gni")

declare_args() {
  # Build IPC fuzzer by default if it's a supported configuration. For
  # sanitizer builds, this needs to be enabled explicitly as they can be slow
  # (especially MSan).
  enable_ipc_fuzzer = false
}
